- Add GET, POST, PUT, DELETE api for product - Add nested call api to third party api (BNM Currency Exchange Rate) - Add support simple pagination for get product list - Add logging for request and response - Add unit test for service layer - Add sample postman collection for requests
Signed-off-by: user <user@example.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=demorest
+
+## mysql
+## spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+
+spring.datasource.url=jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=TESTDB
+spring.datasource.username=springuser
+spring.datasource.password=P@ssw0rd
+
+## mysql
+## spring spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+logging.file.name=myapplication.log
